Fix overflows and links

--- a/_sass/chulapa-classes.scss
+++ b/_sass/chulapa-classes.scss
@@ -1147,6 +1147,7 @@ $wlc-text-color: color-contrast($footer-chulapa-bg-color, $black, $white);
 #welcomments__container {
   text-align: left;
   font-family: $font-family-base;
+  overflow-x: hidden;
 
   //Name
   .welcomments__comments-title,
